src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  /* @apply overflow-x-hidden; */
  scroll-behavior: smooth;
}

*,
* > * {
  @apply font-[genty];
}
.rbh {
  text-shadow: 1px 1px #00000036;
}
.rbh::after {
  text-shadow: 3px 3px #00000036;
}
.rbh::before {
  text-shadow: 3px 3px #00000036;
}
.no-rbh {
  text-shadow: none !important;
}

@font-face {
  font-family: "Genty";
  src: url("./fonts/GentySans-Regular.ttf");
}

.fx {
  @apply flex justify-center items-center;
}
.genty {
  @apply font-[genty];
}
footer .links span {
  @apply text-c2 cursor-pointer;
}

h2.heading {
  line-height: 1;
  letter-spacing: normal;
  text-transform: uppercase;
  margin-bottom: 80px;
}
.scroller.active {
  @apply !bg-white !shadow-md;
}
.scroller.active .nav-link {
  @apply !text-black;
}
.scroller.inactive {
  @apply bg-transparent shadow-none;
}
.foot * {
  @apply !text-c3;
}
footer .links div {
  @apply flex flex-col gap-3 items-start;
}
footer .links div h3 {
  @apply font-bold text-xl !text-c3;
}
/* Animation Styles */
@keyframes fadeInDown {
  from {
    opacity: 0;
    transform: translateY(-20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fadeOutDown {
  from {
    opacity: 1;
    transform: translateY(0);
  }
  to {
    opacity: 0;
    transform: translateY(20px);
  }
}

/* Apply Animation Classes */
.fadeInDown {
  animation: fadeInDown 0.2s ease-in-out;
}

.fadeOutDown {
  animation: fadeOutDown 0.2s ease-in-out;
}
.fadeOut {
  animation: fadeOut 0.4s ease-out;
}
.review-text-slider .owl-prev,
.review-text-slider .owl-next {
  @apply !bg-black/10 !font-[genty] !font-bold !text-3xl !text-white;
}
.author-meta {
  @apply flex justify-center;
}
.owl-item.active.center {
  @apply !z-20;
}
.owl-item {
  @apply !z-10;
}
.loader {
  opacity: 1;
  transition: opacity 0.5s ease-out;
}
.loader.hidden {
  opacity: 0;
  pointer-events: none;
}
@keyframes fadeOut {
  from {
    opacity: 1;
    /* transform: translateY(0); */
  }
  to {
    opacity: 0;
    /* transform: translateY(20px); */
  }
}
.contain {
  padding-left: 1rem;
  padding-right: 1rem;
}
@media (min-width: 768px) {
  .contain {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
  }
}
.contain.service {
  padding-left: 2rem !important;
  padding-right: 2rem !important;
}

